# taxi-lakehouse-ai-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: taxi_monthly_pipeline.py
benchmarks/: README.md
benchmarks/perf/: latency_cold.json  load_results_dashboard.json  load_results_dashboard_hi.json  load_results_t2.json  load_results_users.json  load_test.py  query_latency.py
benchmarks/safety/: adversarial_queries.json  run_safety.py
benchmarks/spider/: README.md  gold_dev.txt  preflight.py  run_official_eval.sh  runner.py  schema_adapter.py  scorer.py  sqlnorm.py
benchmarks/taxi/: rescore.py  scoring.py  taxi_questions.json  taxi_runner.py  validate_catalog.py  verify_gold.py  verify_questions.py
contracts/: semantic_catalog.yaml
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: configure_minio_access.sql
dbt/models/: schema.yml
docs/: README.md  agent-evaluation-results.json  agent-evaluation.md  architecture-review.md  architecture.md  codex-agent-playbook.md  data-contracts.md  data-quality-report.md  demo-scenarios.md  development-roadmap.md  modeling-decisions.md  performance-benchmark-results.json  release-checklist.md  runbook.md  source-notes.md  test-results-report.md
infra/: README.md
scripts/: agent_eval.py  benchmark_phase17.py  build_powerbi_duckdb.py  export_gold_powerbi.py  release_check.py
tests/: test_api_smoke.py  test_dbt_runner.py  test_operational_scripts.py  test_semantic_catalog.py  test_sql_guardrails.py  test_tlc_ingestion.py
(+69 files in other folders)
